// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders properly 1`] = `
<div
  className="theme-purple"
>
  <div
    className=" customCheckbox customCheckboxDefault "
    onClick={[Function]}
  >
    <input
      name="checkbox"
      type="hidden"
      value="no"
    />
    <input
      checked={true}
      className=""
      id="checkbox"
      name="checkbox"
      readOnly={true}
      type="checkbox"
      value="yes"
    />
    <label
      className=""
      htmlFor="checkbox"
    >
      Accept terms and conditions
    </label>
  </div>
</div>
`;

exports[`Checkbox renders properly when value is invalid 1`] = `
<div
  className="theme-purple"
>
  <div
    className=" customCheckbox customCheckboxDefault error"
    onClick={[Function]}
  >
    <input
      name="checkbox"
      type="hidden"
      value="no"
    />
    <input
      checked={true}
      className="error"
      id="checkbox"
      name="checkbox"
      readOnly={true}
      type="checkbox"
      value="yes"
    />
    <label
      className="error"
      htmlFor="checkbox"
    >
      Accept terms and conditions
    </label>
  </div>
</div>
`;
